--- a/css/styles.css
+++ b/css/styles.css
@@ -214,10 +214,19 @@ button {
 /* #region Hero */
 
 .hero-section {
-  background-color: var(--navy-blue);
-  padding: 188px 0;
-  text-align: center;
 }
+
+.hero-container {
+  padding: 188px 0;
+  width: 100%;
+  max-width: 1440px;
+  background-image: linear-gradient(var(--grey), var(--grey)),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .hero-title {
   margin: 0 auto;
   max-width: 496px;
@@ -273,9 +282,19 @@ button {
 .feature-item {
   width: calc((100% - 72px) / 4);
 }
+
+.feature-icon {
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--light-slate);
+  background: var(--cloud);
+}
+
 .feature-caption {
   text-align: left;
-  margin-bottom: 8px;
+  margin: 8px 0;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
