--- a/css/styles.css
+++ b/css/styles.css
@@ -145,17 +145,17 @@ button {
 .socials-item {
   width: 40px;
   height: 40px;
-  background-color: var(--iris);
-  border-radius: 50%;
-  transition: var(--anim-socials);
-  transition-property: background-color;
 }
 .socials-link {
   width: 100%;
   height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: var(--anim-socials);
+  transition-property: background-color;
 }
 
 /* Card set */
@@ -176,6 +176,9 @@ button {
 
 .header {
   border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -208,6 +211,9 @@ button {
   color: var(--navy-blue);
   transition: var(--anim-socials);
   transition-property: color;
+}
+.header-nav-link.active {
+  color: var(--ocean);
 }
 .header-nav-link::after {
   position: absolute;
@@ -256,10 +262,6 @@ button {
 /* #region Hero */
 
 .hero-section {
-}
-
-.hero-container {
-  padding: 188px 0;
   width: 100%;
   max-width: 1440px;
   background-image: linear-gradient(var(--grey), var(--grey)),
@@ -267,6 +269,11 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
+}
+
+.hero-container {
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -337,11 +344,12 @@ button {
   border-radius: 4px;
   border: 1px solid var(--light-slate);
   background: var(--cloud);
+  margin-bottom: 8px;
 }
 
 .feature-caption {
   text-align: left;
-  margin: 8px 0;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -400,8 +408,8 @@ button {
 }
 .socials-link {
 }
-.socials-item:focus,
-.socials-item:hover {
+.socials-link:focus,
+.socials-link:hover {
   background-color: var(--ocean);
 }
 .socials-icon {
@@ -438,23 +446,12 @@ button {
   transition: var(--anim-socials);
   transition-property: box-shadow;
 }
-.portfolio-item:hover .overlay {
+.portfolio-item:hover .overlay-text {
   transform: translateY(0);
 }
 .portfolio-wrapper {
   position: relative;
   overflow: hidden;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--iris);
-  transform: translateY(100%);
-  transition: var(--anim-socials);
-  transition-property: transform;
 }
 .overlay-text {
   text-align: left;
@@ -462,7 +459,15 @@ button {
   font-family: Roboto;
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  transform: translateY(100%);
+  transition: var(--anim-socials);
+  transition-property: transform;
 }
 .portfolio-caption {
   margin-bottom: 8px;
@@ -491,6 +496,7 @@ button {
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 .footer-data {
   margin-right: 120px;
@@ -508,8 +514,8 @@ button {
   color: var(--cloud);
 }
 
-.footer-socials-item:focus,
-.footer-socials-item:hover {
+.footer-socials-link:focus,
+.footer-socials-link:hover {
   background-color: var(--green);
 }
 
@@ -523,6 +529,10 @@ button {
   line-height: 24px; /* 150% */
   letter-spacing: 0.32px;
   margin-bottom: 16px;
+}
+
+.footer-socials-list {
+  gap: 16px;
 }
 
 /* #endregion Footer */
